fix: fix overlapping contents

--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ button {
 .main-content {
   width: 60%;
   border: 0.3px solid rgb(75, 85, 99);
-  margin-left: 245px;
+  margin-left: 275px;
   margin-right: 300px;
 }
 
@@ -143,7 +143,7 @@ button {
   }
 
   .main-content {
-    margin-left: 71px;
+    margin-left: 80px;
   }
 }
 
